# cloud

./: .gitignore  Dockerfile  Procfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
app/: main.py  models.py
docs/lab1/: README.md
docs/lab4/: README.md  лаб 4.docx
docs/lab6/: README.md
k8s/: fastap-app-service.yaml  fastapi-app-deployment.yaml  postgres-deployment.yaml  postgres-secret.yaml
labs/lab1/: README.md  лаб 1.docx
labs/lab2/: README.md  лаб 2.docx
labs/lab3/: README.md  лаб 3.docx
labs/lab4/: README.md
labs/lab5/: README.md
labs/lab6/: README.md
terraform/: .terraform.lock.hcl  ec2.tf  locals.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
