[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.4.2",
    "python-multipart==0.0.6",
    "sqlalchemy>=2.0.40",
    "uvicorn==0.23.2",
]
